# 1D2V-FluidEquationSolver

./: .gitignore  CMakeLists.txt  README.md
PostProcessing/: README.md  config.py  normalization.py  plot_ex_spacetime.py  plot_ex_time_fft_at_position.py  plot_output.py  plot_spatial_profile_for_state.py  plot_time_evolution_at_positions.py
output/: diagnostics.csv  state_0000000.csv  state_0014990.csv  state_0029980.csv  state_0044970.csv  state_0059960.csv  state_0074950.csv  state_0089940.csv  state_0104930.csv  state_0119920.csv  state_0134910.csv  state_0149900.csv  state_0164890.csv  state_0179880.csv  state_0194870.csv  state_0209860.csv  state_0224850.csv  state_0239840.csv  state_0254830.csv  state_0269820.csv  state_0284810.csv  state_0299800.csv  state_0314790.csv  state_0329780.csv  state_0344770.csv  state_0359760.csv  state_0374750.csv  state_0389740.csv  state_0404730.csv  state_0419720.csv  state_0434710.csv  state_0449700.csv  state_0464690.csv  state_0479680.csv  state_0494670.csv  state_0509660.csv  state_0524650.csv  state_0539640.csv  state_0554630.csv  state_0569620.csv  (+202 more)
src/: config.h  fluid_maxwell_1d.cpp  fluid_maxwell_1d.h  fluid_solver.cpp  fluid_solver.h  laser_driver.cpp  laser_driver.h  main.cpp  maxwell_solver.cpp  maxwell_solver.h  physics_constants.h  result_output.cpp  result_output.h
